--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tweneboah/book-keeping-app.git"
+    "url": "git+https://github.com/Socioo/CashFlow.git"
   },
-  "author": "Emmanuel Tweneboah",
-  "license": "MIT",
+  "author": "Ahmad Badamasi",
+  "license": "",
   "bugs": {
-    "url": "https://github.com/tweneboah/book-keeping-app/issues"
+    "url": "https://github.com/Socioo/Cashflow/issues"
   },
-  "homepage": "https://github.com/tweneboah/book-keeping-app#readme",
+  "homepage": "https://github.com/Socioo/CashFlow#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.3.0",
